# ThinkDSP

./: .gitignore  Dockerfile  Makefile  README.md  _config.yml  environment.yml  index.html  index.md  params.json  pr1.pages  pr2.pages  pr3.pages  pyproject.toml  requirements-dev.txt  requirements.txt  run_exercises.sh  tutorial.md
.devcontainer/: Dockerfile  devcontainer.json
book/: .gitignore  Makefile  book-kor.tex  book.tex  diagram.tex  diagram2.tex  header.html  section.sty  thinkdsp.tex
code/: .gitignore  BTC_USD_2013-10-01_2020-03-26-CoinDesk.csv  Case Study.ipynb  FB.csv  FB_2.csv  Makefile  aliasing.py  autocorr.py  cacophony.ipynb  chap01.ipynb  chap01.py.ipynb  chap01preview.ipynb  chap01soln.ipynb  chap02.ipynb  chap02soln.ipynb  chap03.ipynb  chap03soln.ipynb  chap04.ipynb  chap04soln.ipynb  chap04soln.py  chap05.ipynb  chap05soln.ipynb  chap06.ipynb  chap06soln.ipynb  chap06starter.ipynb  chap07.ipynb  chap07soln.ipynb  chap08.ipynb  chap08soln.ipynb  chap09.ipynb  chap09preview.ipynb  chap09soln.ipynb  chap10.ipynb  chap10preview.ipynb  chap10soln.ipynb  chap11.ipynb  chap11soln.ipynb  chirp.py  convolution.py  cumsum_example.ipynb  (+42 more)
examples/: chap01preview.ipynb
exercises/: ch_03_ex_3_sawtooth_chirp.py  install.sh  think_dsp_summary_notes.md
haskellcode/: thinkdsp.hs
nb/: chap01.ipynb  chap01soln.ipynb  chap02.ipynb  chap02soln.ipynb  chap03.ipynb  chap03soln.ipynb  chap04.ipynb  chap04soln.ipynb  chap05.ipynb  chap05soln.ipynb  chap06.ipynb  chap06soln.ipynb  chap07.ipynb  chap07soln.ipynb  chap08.ipynb  chap08soln.ipynb  chap09.ipynb  (+9 more)
(+220 files in other folders)
