[tool.poetry]
name = "thinkdsp"
version = "0.1.0"
description = ""
authors = ["Allen Downey <allen.downey@olin.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
pandas = "^1.1.4"
scipy = "^1.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
